# CardGames

./: CMakeLists.txt  CardGames.sln
CardGames/: Card.cpp  Card.h  CardGames.cpp  CardGames.vcxproj  CardGames.vcxproj.filters  Deck.h  FiveCardDraw.h  Game.cpp  Game.h  Hand.h  Lab4.cpp  Player.h  SevenCardStud.h  stdafx.cpp  support.h
